--- a/app/index.html
+++ b/app/index.html
@@ -137,8 +137,6 @@
 <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js"></script>
 <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
 <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
-<script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
-<script src="bower_components/ng-file-upload-shim/angular-file-upload-shim.js"></script>
 <script src="bower_components/angular-elastic/elastic.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-mocks/angular-mocks.js"></script>
@@ -150,6 +148,8 @@
 <script src="bower_components/angular-bootstrap-show-errors/src/showErrors.js"></script>
 <script src="bower_components/angular-ui-utils/validate.js"></script>
 <script src="bower_components/ng-currency/dist/ng-currency.min.js"></script>
+<script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
+<script src="bower_components/ng-file-upload-shim/angular-file-upload-shim.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -169,7 +169,9 @@
 <script src="scripts/services/hakemus.js"></script>
 <script src="scripts/services/hakemuskausi.js"></script>
 <script src="scripts/services/kayttaja.js"></script>
+<script src="scripts/services/liite.js"></script>
 <script src="scripts/services/organisaatio.js"></script>
+<script src="scripts/services/paatos.js"></script>
 <script src="scripts/services/suunnittelu.js"></script>
 <script src="scripts/services/thingsAsPromised.js"></script>
 <script src="scripts/services/status.js"></script>
