--- a/app/harri.html
+++ b/app/harri.html
@@ -14,6 +14,7 @@
       document.cookie = name + "=" + value + expires + "; path=/";
     }
     createCookie('oam-remote-user', 'harri', 1);
+    createCookie('oam-groups', 'juku_hakija', 1);
     window.location.replace(".");
   </script>
 </head>
