--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,9 @@
   <link rel="stylesheet" href="styles/bootstrap.css"/>
   <link href="styles/jukubootstrap.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="styles/juku.css"/>
-  <link rel="stylesheet" type="text/css" href="styles/angular-toastr.css" />
+  <link rel="stylesheet" type="text/css" href="styles/angular-toastr.css"/>
 </head>
-<body ng-app="jukufrontApp" class="bodypadding">
+<body ng-app="jukufrontApp" class="bodypadding" ng-cloak>
 <div ng-controller="PaanayttoCtrl">
   <div class="navbar-default navbar navbar-fixed-top" role="navigation">
     <div class="container">
@@ -36,19 +36,24 @@
       </div>
       <div style="height: auto;" class="navbar-collapse collapse in" collapse="">
         <ul class="nav navbar-nav">
-          <li class="headertxt" ng-class="{active:isActive('/h/hakemukset')}">
+          <li ng-show="sallittu('view-omat-hakemukset')" class="headertxt"
+              ng-class="{active:isActive('/h/hakemukset')}">
             <a href="#/h/hakemukset" ng-href="#/h/hakemukset" class="navbartxt">Omat hakemukset</a>
           </li>
-          <li class="headertxt" ng-class="{active:isActive('/k/hakemukset/AH0')}">
+          <li ng-show="sallittu('view-kaikki-hakemukset')" class="headertxt"
+              ng-class="{active:isActive('/k/hakemukset/AH0')}">
             <a href="#/k/hakemukset/AH0" ng-href="#/k/hakemukset/AH0" class="navbartxt">Kaikki hakemukset</a>
           </li>
-          <li class="headertxt" ng-class="{active:isActive('/k/hakemuskaudenhallinta')}">
-            <a href="#/k/hakemuskaudenhallinta" ng-href="#/k/hakemuskaudenhallinta" class="navbartxt">Hakemuskaudet</a>
+          <li ng-show="sallittu('view-hakemuskausi')" class="headertxt"
+              ng-class="{active:isActive('/k/hakemuskaudenhallinta')}">
+            <a href="#/k/hakemuskaudenhallinta" ng-href="#/k/hakemuskaudenhallinta"
+               class="navbartxt">Hakemuskaudet</a>
           </li>
-          </ul>
+        </ul>
         <ul class="nav navbar-nav pull-right">
           <li class="navbaruser">
             <p class="navbartxt">{{user.etunimi}} {{user.sukunimi}}</p>
+
             <p class="navbartxt">{{userOrganisaatio}}</p>
           </li>
           <!--
