--- a/app/katri.html
+++ b/app/katri.html
@@ -14,6 +14,7 @@
       document.cookie = name + "=" + value + expires + "; path=/";
     }
     createCookie('oam-remote-user', 'katri', 1);
+    createCookie('oam-groups', 'juku_kasittelija', 1);
     window.location.replace(".");
   </script>
 </head>
