--- a/app/index.html
+++ b/app/index.html
@@ -30,12 +30,20 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">
+        <a ng-show="sallittu('view-hakemuskausi')" class="navbar-brand" href="#/k/hakemuskaudenhallinta">
+          <img src="images/JUKU-logo.png" class="logoalign">
+        </a>
+        <a ng-hide="sallittu('view-hakemuskausi')" class="navbar-brand" href="#/h/hakemukset">
           <img src="images/JUKU-logo.png" class="logoalign">
         </a>
       </div>
       <div style="height: auto;" class="navbar-collapse collapse in" collapse="">
         <ul class="nav navbar-nav">
+          <li ng-show="sallittu('view-hakemuskausi')" class="headertxt"
+              ng-class="{active:isActive('/k/hakemuskaudenhallinta')}">
+            <a href="#/k/hakemuskaudenhallinta" ng-href="#/k/hakemuskaudenhallinta"
+               class="navbartxt">Hakemuskaudet</a>
+          </li>
           <li ng-show="sallittu('view-omat-hakemukset')" class="headertxt"
               ng-class="{active:isActive('/h/hakemukset')}">
             <a href="#/h/hakemukset" ng-href="#/h/hakemukset" class="navbartxt">Omat hakemukset</a>
@@ -43,11 +51,6 @@
           <li ng-show="sallittu('view-kaikki-hakemukset')" class="headertxt"
               ng-class="{active:isActive('/k/hakemukset/AH0')}">
             <a href="#/k/hakemukset/AH0" ng-href="#/k/hakemukset/AH0" class="navbartxt">Kaikki hakemukset</a>
-          </li>
-          <li ng-show="sallittu('view-hakemuskausi')" class="headertxt"
-              ng-class="{active:isActive('/k/hakemuskaudenhallinta')}">
-            <a href="#/k/hakemuskaudenhallinta" ng-href="#/k/hakemuskaudenhallinta"
-               class="navbartxt">Hakemuskaudet</a>
           </li>
         </ul>
         <ul class="nav navbar-nav pull-right">
