--- a/app/index.html
+++ b/app/index.html
@@ -100,7 +100,8 @@
         <h5 class="navbartxt">Yhteystiedot</h5>
       </div>
       <div class="col-md-4">
-        <h5 class="navbartxt">Anna palautetta</h5>
+        <div data-ng-include data-src="'buildversion.html'"></div>
+        <h5 class="navbartxt" ng-include="buildversion.html"></h5>
       </div>
       <div class="col-md-4">
         <h5 class="navbartxt r-align">Liikennevirasto.fi</h5>
