--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
             <a href="#/k/hakemuskaudenhallinta" ng-href="#/k/hakemuskaudenhallinta"
                ng-class="{navbartxt:!isActive('/k/hakemuskaudenhallinta')}">Hakemuskaudet</a>
           </li>
-          <li ng-show="sallittu('view-omat-hakemukset')"
+          <li ng-show="sallittu('view-oma-hakemus')"
               ng-class="{headertxtselected:isActive('/h/hakemukset')}">
             <a href="#/h/hakemukset" ng-href="#/h/hakemukset" ng-class="{navbartxt:!isActive('/h/hakemukset')}">Omat hakemukset</a>
           </li>
