--- a/app/index.html
+++ b/app/index.html
@@ -56,30 +56,10 @@
         <ul class="nav navbar-nav pull-right">
           <li class="navbaruser">
             <p class="navbartxt">{{user.etunimi}} {{user.sukunimi}}</p>
-
-            <p class="navbartxt">{{userOrganisaatio}}</p>
-            <p class="navbartxt"><a href="https://testiextranet.liikennevirasto.fi/extranet/c/portal/logout">Kirjaudu ulos</a> </p>
+            <p class="navbartxt">{{userOrganisaatio}}<br>
+              <a class="navbartxt" href="https://testiextranet.liikennevirasto.fi/extranet/c/portal/logout">Kirjaudu ulos</a>
+            </p>
           </li>
-          <!--
-                <li>
-                  <a ng-href="#/l/tietoajukusta">Tietoa JUKUsta</a>
-                </li>
-                <li>
-                  <a ng-href="#/l/hakemus">Hakemus</a>
-                </li>
-                <li>
-                  <a ng-href="#/main">Main</a>
-                </li>
-
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tiina Tarkastaja <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a href="#">Omat Tiedot</a>
-                    </li>
-                  </ul>
-                </li>
-        -->
         </ul>
       </div>
     </div>
@@ -139,18 +119,7 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/lodash/dist/lodash.compat.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/alert.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/button.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/carousel.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/collapse.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/dropdown.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tab.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/transition.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/scrollspy.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
+<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
 <script src="bower_components/angular-elastic/elastic.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-mocks/angular-mocks.js"></script>
