--- a/app/index.html
+++ b/app/index.html
@@ -5,22 +5,8 @@
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <!-- build:css(.) styles/vendor.css -->
-  <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
-  <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
-  <!-- endbower -->
-  <!-- endbuild -->
-  <!-- build:css(.tmp) styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css"/>
   <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
-  <!-- endbuild -->
-  <link rel="stylesheet" href="styles/bootstrap.css"/>
-  <link href="styles/jukubootstrap.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="styles/juku.css"/>
-  <link rel="stylesheet" type="text/css" href="styles/angular-toastr.css"/>
-  <link rel="stylesheet" type="text/css" href="styles/loading-bar.css"/>
+  <link rel="stylesheet" href="styles/styles.css"/>
 </head>
 <body class="bodypadding" ng-cloak>
 <div ng-controller="PaanayttoCtrl">
@@ -103,69 +89,10 @@
     //forceLoad: true, html5: false //to debug flash in HTML5 browsers
   }
 </script>
-<!-- build:js(.) scripts/oldieshim.js -->
 <!--[if lt IE 9]>
 <script src="bower_components/es5-shim/es5-shim.js"></script>
 <script src="bower_components/json3/lib/json3.js"></script>
 <![endif]-->
-<!-- endbuild -->
-<!-- build:js(.) scripts/vendor.js -->
-<!-- bower:js -->
-<script src="bower_components/jquery/dist/jquery.js"></script>
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/lodash/dist/lodash.compat.js"></script>
-<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/alert.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/button.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/carousel.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/collapse.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/dropdown.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tab.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/transition.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/scrollspy.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
-<script src="bower_components/angular-elastic/elastic.js"></script>
-<script src="bower_components/angular-animate/angular-animate.js"></script>
-<script src="bower_components/angular-mocks/angular-mocks.js"></script>
-<script src="bower_components/angular-route/angular-route.js"></script>
-<script src="bower_components/angular-scenario/angular-scenario.js"></script>
-<script src="bower_components/angular-smart-table/dist/smart-table.min.js"></script>
-<script src="bower_components/angular-resource/angular-resource.js"></script>
-<script src="bower_components/angular-toastr/dist/angular-toastr.js"></script>
-<script src="bower_components/angular-bootstrap-show-errors/src/showErrors.js"></script>
-<script src="bower_components/angular-ui-utils/validate.js"></script>
-<script src="bower_components/ng-currency/dist/ng-currency.min.js"></script>
-<script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
-<script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
-<script src="bower_components/ng-file-upload-shim/ng-file-upload-shim.js"></script>
-<!-- endbower -->
-<script src="bower_components/angular-i18n/angular-locale_fi-fi.js"></script>
-<!-- endbuild -->
-<!-- build:js({.tmp,app}) scripts/scripts.js -->
-<script src="scripts/app.js"></script>
-<script src="scripts/controllers/yhteinen/hakemus.js"></script>
-<script src="scripts/controllers/yhteinen/paanaytto.js"></script>
-<script src="scripts/controllers/hakija/hakemukset.js"></script>
-<script src="scripts/controllers/kasittelija/hakemukset.js"></script>
-<script src="scripts/controllers/kasittelija/hakemuskaudenHallinta.js"></script>
-<script src="scripts/controllers/kasittelija/paatos.js"></script>
-<script src="scripts/controllers/kasittelija/suunnittelu.js"></script>
-<script src="scripts/directives/hakemuslabel.js"></script>
-<script src="scripts/directives/noenter.js"></script>
-<script src="scripts/directives/hakemussummary.js"></script>
-<script src="scripts/services/avustuskohde.js"></script>
-<script src="scripts/services/hakemus.js"></script>
-<script src="scripts/services/hakemuskausi.js"></script>
-<script src="scripts/services/kayttaja.js"></script>
-<script src="scripts/services/liite.js"></script>
-<script src="scripts/services/organisaatio.js"></script>
-<script src="scripts/services/paatos.js"></script>
-<script src="scripts/services/suunnittelu.js"></script>
-<script src="scripts/services/status.js"></script>
-<script src="scripts/services/common.js"></script>
-<!-- endbuild -->
+<script type="text/javascript" src="scripts/scripts.js"></script>
 </body>
 </html>
