--- a/app/index.html
+++ b/app/index.html
@@ -90,8 +90,8 @@
   }
 </script>
 <!--[if lt IE 9]>
-<script src="bower_components/es5-shim/es5-shim.js"></script>
-<script src="bower_components/json3/lib/json3.js"></script>
+<script src="scripts/ie9/es5-shim.min.js"></script>
+<script src="scripts/ie9/json3.min.js"></script>
 <![endif]-->
 <script type="text/javascript" src="scripts/scripts.js"></script>
 </body>
