--- a/app/index.html
+++ b/app/index.html
@@ -1,98 +1,56 @@
 <!doctype html>
 <html ng-app="jukufrontApp" class="no-js">
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
-  <link rel="stylesheet" href="styles/styles.css"/>
-</head>
-<body class="bodypadding" ng-cloak>
-<div ng-controller="PaanayttoCtrl">
-  <div class="navbar-default navbar navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a ng-show="sallittu('view-hakemuskausi')" class="navbar-brand" href="#/k/hakemuskaudenhallinta">
-          <img src="images/JUKU-logo.png" class="logoalign">
-        </a>
-        <a ng-hide="sallittu('view-hakemuskausi')" class="navbar-brand" href="#/h/hakemukset">
-          <img src="images/JUKU-logo.png" class="logoalign">
-        </a>
-      </div>
-      <div style="height: auto;" class="navbar-collapse collapse in" collapse="">
-        <ul class="nav navbar-nav">
-          <li ng-show="sallittu('view-hakemuskausi')"
-              ng-class="{headertxtselected:isActive('/k/hakemuskaudenhallinta')}">
-            <a href="#/k/hakemuskaudenhallinta" ng-href="#/k/hakemuskaudenhallinta"
-               ng-class="{navbartxt:!isActive('/k/hakemuskaudenhallinta')}">Hakemuskaudet</a>
-          </li>
-          <li ng-show="sallittu('view-oma-hakemus')"
-              ng-class="{headertxtselected:isActive('/h/hakemukset')}">
-            <a href="#/h/hakemukset" ng-href="#/h/hakemukset" ng-class="{navbartxt:!isActive('/h/hakemukset')}">Omat
-              hakemukset</a>
-          </li>
-          <li ng-show="sallittu('view-kaikki-hakemukset')"
-              ng-class="{headertxtselected:isActive('/k/hakemukset/AH0')}">
-            <a href="#/k/hakemukset/AH0" ng-href="#/k/hakemukset/AH0"
-               ng-class="{navbartxt:!isActive('/k/hakemukset/AH0')}">Kaikki hakemukset</a>
-          </li>
-        </ul>
-        <ul class="nav navbar-nav pull-right">
-          <li class="navbaruser">
-            <p class="navbartxt">{{user.etunimi}} {{user.sukunimi}}</p>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="styles/styles.css"/>
+  </head>
+  <body ng-class="{'is-collapsed': $root.isCollapsed }" ng-cloak ng-controller="PaanayttoCtrl">
+    <juku-header user="user"></juku-header>
+    <juku-sidebar user="user"></juku-sidebar>
 
-            <p class="navbartxt">{{userOrganisaatio}}<br>
-              <a class="navbartxt" href="https://testiextranet.liikennevirasto.fi/extranet/c/portal/logout">Kirjaudu
-                ulos</a>
-            </p>
-          </li>
-        </ul>
+    <!--[if lt IE 7]>
+    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+      your browser</a> to improve your experience.</p>
+    <![endif]-->
+    <!-- Add your site or application content here -->
+    <div class="app">
+      <div ng-view=""></div>
+      <div id="footer">
+        <div class="container">
+          <div class="footer">
+            <div class="col-md-2">
+              <img src="images/JUKU-logo.png" class="footerlogo">
+            </div>
+            <div class="col-md-2">
+              <h5 class="navbartxt">Yhteystiedot</h5>
+            </div>
+            <div class="col-md-4">
+              <div data-ng-include data-src="'buildversion.html'"></div>
+              <h5 class="navbartxt" ng-include="buildversion.html"></h5>
+            </div>
+            <div class="col-md-4">
+              <h5 class="navbartxt r-align">Liikennevirasto.fi</h5>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-<!--[if lt IE 7]>
-<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
-  your browser</a> to improve your experience.</p>
-<![endif]-->
-<!-- Add your site or application content here -->
-<div ng-view=""></div>
-<div id="footer">
-  <div class="container">
-    <div class="footer">
-      <div class="col-md-2">
-        <img src="images/JUKU-logo.png" class="footerlogo">
-      </div>
-      <div class="col-md-2">
-        <h5 class="navbartxt">Yhteystiedot</h5>
-      </div>
-      <div class="col-md-4">
-        <div data-ng-include data-src="'buildversion.html'"></div>
-        <h5 class="navbartxt" ng-include="buildversion.html"></h5>
-      </div>
-      <div class="col-md-4">
-        <h5 class="navbartxt r-align">Liikennevirasto.fi</h5>
-      </div>
-    </div>
-  </div>
-</div>
-<script>
-  FileAPI = {
-    jsPath: 'scripts/ie9/',
-    staticPath: 'scripts/ie9/'
-    //forceLoad: true, html5: false //to debug flash in HTML5 browsers
-  }
-</script>
-<!--[if lt IE 9]>
-<script src="scripts/ie9/es5-shim.min.js"></script>
-<script src="scripts/ie9/json3.min.js"></script>
-<![endif]-->
-<script type="text/javascript" src="scripts/scripts.js"></script>
-</body>
+
+    <script>
+      FileAPI = {
+        jsPath: 'scripts/ie9/',
+        staticPath: 'scripts/ie9/'
+        //forceLoad: true, html5: false //to debug flash in HTML5 browsers
+      }
+    </script>
+    <!--[if lt IE 9]>
+    <script src="scripts/ie9/es5-shim.min.js"></script>
+    <script src="scripts/ie9/json3.min.js"></script>
+    <![endif]-->
+    <script type="text/javascript" src="scripts/scripts.js"></script>
+  </body>
 </html>
