--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
+    <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="styles/styles.css"/>
   </head>
   <body ng-class="{'is-collapsed': $root.isCollapsed }" ng-cloak ng-controller="PaanayttoCtrl">
