--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title>Joukkoliikenteen rahoitus-, kustannus- ja suoritetietojen hallinta</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
+    <link href="fonts/index.css" rel="stylesheet" type="text/css"/>
     <link rel="shortcut icon" href="favicon.ico" />
     <!-- inject:css -->
     <!-- endinject -->
